got opp choice showing in modal for all outcomes, working on fixing the spacing the of modal text

--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,13 @@ h1, h2, h3, h4, strong{
 
 }
 
+#result{
+  font-family: 'Indie Flower', cursive;
+  font-size: 30px;
+  color: white;
+
+}
+
 .hvr-float {
   display: inline-block;
   vertical-align: middle;
